# lens-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  browser_pool.py  db.py  memory.py  server.py
