[project]
name = "lens-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.4.2",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
]

[dependency-groups]
dev = [
    "watchfiles>=1.2.0",
]
