[project]
name = "lens-mcp"
version = "0.1.0"
description = "MCP server for browser-grade web access — fetch pages as markdown, screenshot, and download images via headless Playwright"
readme = "README.md"
requires-python = ">=3.14"
keywords = ["mcp", "playwright", "browser", "web-scraping", "screenshot", "fastmcp", "llm-tools"]

dependencies = [
    "fastmcp>=3.4.2",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
]

[project.urls]
Homepage = "https://lens.sshogunn.org"
Repository = "https://github.com/SSShogunn/lens-mcp"

[dependency-groups]
dev = [
    "watchfiles>=1.2.0",
]
